<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patient_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientDetailActivity"
    tools:ignore="MergeRootFrame"
    android:padding="15dp"
    android:background="@drawable/card">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/first_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="20"
        android:id="@+id/firstName"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:hint="@string/first_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/last_name"
        android:id="@+id/textView9"
        android:layout_below="@+id/firstName"
        android:layout_alignLeft="@+id/firstName"
        android:layout_marginTop="@dimen/patient_input_default_marging" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="20"
        android:id="@+id/lastName"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:hint="@string/last_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/street_address"
        android:id="@+id/cardDetailComment"
        android:layout_below="@+id/lastName"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/firstName"
        android:layout_marginTop="@dimen/patient_input_default_marging" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editStreetAddress"
        android:layout_below="@+id/cardDetailComment"
        android:layout_alignLeft="@+id/cardDetailComment"
        android:layout_alignStart="@+id/cardDetailComment"
        android:layout_alignRight="@+id/lastName"
        android:layout_alignEnd="@+id/lastName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/birthday"
        android:id="@+id/cardDetailBirthday"
        android:layout_below="@+id/editStreetAddress"
        android:layout_alignLeft="@+id/editStreetAddress"
        android:layout_alignStart="@+id/editStreetAddress"
        android:layout_marginTop="@dimen/patient_input_default_marging" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/birthday"
        android:layout_below="@+id/cardDetailBirthday"
        android:layout_alignLeft="@+id/cardDetailBirthday"
        android:layout_alignStart="@+id/cardDetailBirthday" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/editComment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/patient_input_default_marging" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editComment"
        android:layout_below="@+id/cardDetailStreetAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:lines="@integer/comment_line_count"
        android:gravity="top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/comment"
        android:id="@+id/cardDetailStreetAddress"
        android:layout_below="@+id/birthday"
        android:layout_alignLeft="@+id/birthday"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_form"
        android:id="@+id/clearButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>
