...
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/street_address"
        android:id="@+id/textView"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardDetailFirstNameLastName"
        android:layout_alignLeft="@+id/cardDetailFirstNameLastName"
        android:layout_marginTop="@dimen/patient_input_default_marging"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
